# voice

./: .gitignore  Cargo.toml  IMPLEMENTATION_PLAN.md  MIX_MINUS_IMPLEMENTATION_GUIDE.txt  README.md  metadata.json
id/: Cargo.toml
implementation-docs/: instructions.txt
pkg/: manifest.json
resources/: .gitignore  app-framework.md  kit.md  llm-generated-app-guide.md  signatures-types.md
resources/id/id/: 4247a91.rs  b6ad495.rs  ce0d06e-2.rs  ce0d06e.rs  expand-id-old.txt  expand-id.txt  expand-sign-old.txt  expand-sign.txt
ui/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
ui/public/: audio-mixer.js  audio-processor.js  opus-decoder-wrapper.js  opus-encoder-wrapper.js  opus-encoder.js  opus-worker-decoder.js  real-opus-decoder.js  real-opus-encoder.js  test-opus-simple.html  test-opus.html  test-real-opus.html
ui/shared/components/: AudioDebugPanel.tsx  CallEndedScreen.tsx  ChatMessage.tsx  SettingsModal.tsx  SettingsPanel.tsx
ui/shared/services/: audio-service-v2.ts  audio-service-v3.ts  continuous-opus-service.ts  direct-opus-service.ts  opus-codec.ts  opus-inline-service.ts  opus-recorder-service-v2.ts  opus-recorder-service.ts  opus-recorder-wrapper.ts  opus-stream-encoder.ts  raw-opus-service.ts  real-opus-service.ts  simple-opus-service.ts  vad-service.ts
ui/shared/store/: base-voice.ts
ui/src/: App.css  App.tsx  index.css
ui/ui-call/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
voice/: Cargo.toml  expand.txt
voice/src/: audio.rs  audio.rs.backup  icon  lib.rs
(+28 files in other folders)
