[dependencies]
anyhow = "1.0.97"
base64 = "0.22"
dasp = "0.11"
http = "1.1"
opus = "0.3"
process_macros = "0.1"
rand = "0.8"
ringbuf = "0.3"
rmp-serde = "1.3.0"
serde_json = "1.0"
wit-bindgen = "0.36.0"

[dependencies.hyperprocess_macro]
git = "https://github.com/hyperware-ai/hyperprocess-macro"
rev = "1cdbf54"

[dependencies.hyperware_app_common]
git = "https://github.com/hyperware-ai/hyperprocess-macro"
rev = "1cdbf54"

[dependencies.serde]
features = ["derive"]
version = "1.0"

[dependencies.uuid]
features = [
    "v4",
    "serde",
]
version = "1.10"

[features]
simulation-mode = []

[lib]
crate-type = ["cdylib"]

[package]
edition = "2021"
name = "voice"
version = "0.1.0"

[package.metadata.component]
package = "hyperware:process"
